2011-06-06  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.99.
	* NEWS: Update.

2011-06-04  Miloslav Trmač  <mitr@redhat.com>

	* doc/protocol-design.txt (sign-rpm, sign-rpms): New field
	koji-instance.
	* src/utils.py (KojiConfiguration._add_defaults): Add default for
	koji-instances.
	(KojiConfiguration._read_configuration): Handle koji-instances, and the
	per-instance configuration files.
	(koji_read_config): New parameter instance.
	* src/client.py (SignRPMArgumentExaminer.__init__): New parameter
	koji_instance.
	(SignRPMArgumentExaminer.open_rpm): Use the specified Koji instance.
	(SignRPMsRequestThread.__init__): New parameter koji_instance.
	(SignRPMsRequestThread._real_run): Use the specified Koji instance.
	(cmd_sign_rpm, cmd_sign_rpms): New option --koji-instance.
	* src/bridge.py (KojiClient.__get_session): Use the koji-instance
	field.
	(request-types): Allow field 'koji-instance' in sign-rpm and sign-rpms.
	* config/bridge.conf (koji)
	* config/client.conf (koji): Add alternative Koji instance examples.
	* doc/sigul.1.in (sign-rpm, sign-rpms): Document --koji-instance.

2011-06-03  Miloslav Trmač  <mitr@redhat.com>

	* doc/sigul.1.in (sign-rpm): Fix typo in synopsis.
	(sign-rpms): Add --v3-signature to synopsis.

2011-06-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.98.

2011-05-31  Miloslav Trmač  <mitr@redhat.com>

	* tests/basic.at (new-key): Use an expiration date that doesn't overflow
	32-bit time_t.

2011-05-30  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (create_listen_sock)
	* src/double_tls.py (DoubleTLSClient.__child): Explicitly specify socket
	family to avoid a DeprecationWarning.
	* src/double_tls.py (DoubleTLSClient.__child): Use nss.io.AddrInfo
	to avoid a DeprecationWarning.
	* README: Update required python-nss version.

	* NEWS: Update.

	* Makefile.am (DISTCLEANFILES, EXTRA_DIST): Fix (make distcheck).

	* Makefile.am (installcheck-local): Fix AUTOTEST_PATH.
